# GIt-Agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  cli.py  demo.py  git_agent_langgraph.py  gitagent  main.py  pyproject.toml  requirements.txt  routes.py  setup_user.py
controllers/: git_controller.py
services/: git_service.py  groq_api_service.py  mongodb_service.py
utils/: git_commands.py  input_handler.py  prompt_templates.py  streaming.py
